--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="scroll" href="#top">Home</a></li>
                 <li><a class="scroll" href="#about">About</a></li>
-                <li><a class="scroll" href="#treatments">Treatments</a></li>
+                <li><a class="scroll" href="#treatments">Health Coaching</a></li>
 
             </ul>
         </div>
